--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "knex": "^0.21.6",
+    "knex-cleaner": "^1.3.1",
     "morgan": "^1.10.0",
     "sqlite3": "^5.0.0"
   }
